Fixed horizontal scrollbar bug. Added new breakpoint @350px to switch from full justified text to left justified for better readability.

--- a/index.css
+++ b/index.css
@@ -22,7 +22,9 @@ body {
     max-width: var(--MAX-WIDTH);
     background: #333;
     font-size: 1.1rem;
+    scroll-padding: var(--TOP-MENU-HEIGHT) 0 0 0px;
     scroll-padding-top: var(--TOP-MENU-HEIGHT);
+    overflow-x: hidden;
 }
 h1{
     font-size: 2rem;
@@ -90,6 +92,7 @@ ul{
     min-height: var(--img-size);
     min-width: var(--img-size);
     float: left;
+    margin-bottom: 1rem;
     margin-right: 1rem;
 }
 #carousel_overlay{
@@ -182,7 +185,7 @@ ul{
 }
 @media (max-width: 700px) {
     body{
-        --img-size: 99vw;
+        --img-size: 100vw;
         --TOP-MENU-HEIGHT: 2rem;
     }
     #top_menu{ font-size: 1rem; }
@@ -196,4 +199,10 @@ ul{
         --TOP-MENU-HEIGHT: 4.5rem;
     }
     h1{ font-size: 1.5rem; }
+}
+
+@media (max-width: 350px) {
+    body {
+        text-align: left;
+    }
 }
